--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Описание форума "Форум Свободной России"
+email: 5zu1eh+2ihjw8sw9chg8@grr.la
 author: forumfreeru
+github_username:  forumfreeru
 # Build settings
 markdown: kramdown
 theme: minima
