--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ForumFreeRu
+title: Форум Свободной России
 email: 5zu1eh+2ihjw8sw9chg8@grr.la
 author: forumfreeru
 github_username:  forumfreeru
