--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Форум Свободной России
-email: 5zu1eh+2ihjw8sw9chg8@grr.la
+email: forumfreeru@keemail.me
 author: forumfreeru
 github_username:  forumfreeru
 # Build settings
